update projects page

--- a/projects.html
+++ b/projects.html
@@ -19,6 +19,7 @@
 </div>    
 <div class="grid">
     <div class="item">
+    <!--Hello-->
         <a href="https://thep1.github.io/Angry_Birds/"><img src="angry.png" width="400px" height="400px"></a>
         <h1>Angry Birds</h1>
     </div>
